Update placeholder text in index.html to capitalize "Phone"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <form>
                     <div class="mb-4">
                         <!-- <label for="messagePhone" class="form-label">Phone</label> -->
-                        <input type="text" class="form-control" id="messagePhone" placeholder="phone">
+                        <input type="text" class="form-control" id="messagePhone" placeholder="Phone">
                     </div>
                     <div class="mb-4">
                         <!-- <label for="messageText" class="form-label">Text</label> -->
@@ -47,7 +47,7 @@
                 <form>
                     <div class="mb-4">
                         <!-- <label for="messagePhone1" class="form-label">Phone</label> -->
-                        <input type="text" class="form-control" id="messagePhone1" placeholder="phone">
+                        <input type="text" class="form-control" id="messagePhone1" placeholder="Phone">
                     </div>
                     <div class="mb-4">
                         <!-- <label for="messageUrl" class="form-label">File URL</label> -->
